fix alignment of title-dropdown

--- a/src/title-dropdown/title-dropdown.component.scss
+++ b/src/title-dropdown/title-dropdown.component.scss
@@ -19,4 +19,5 @@
 .dropdown-menu {
   min-width: 120px;
   top: initial;
+  left: initial;
 }
